@@ -1,3 +1,9 @@
+2005-03-16  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* include/winnt.h (_LUID): Add structure. Correct LUID typedef. 
+	Thanks to:
+	Paul-Christiaan Spruijtenburg <wakarimasu at users dot sf dot net>
+
 2005-03-07  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* include/ws2tcpip.h (getaddrinfo, freeaddrinfo, getnameinfo):
